test/files/neg/macro-override-abstract-overrides-macro/Impls_1.scala
import scala.reflect.macros.Context

class B
class C extends B

object Impls {
  def impl(c: Context) = c.universe.Ident(c.universe.TypeName("B"))
}
